@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class ApplicationSession
{
    + static getInstance()
    + getCurrentSession()
}

class UserSession
{
    + getUserEmail()
}

class Job {
    - name: String
}

class JobRepository {
  - List<Job> jobs
  + Optional<Job> add(Job job)
  + boolean validateJob(Job job)
  + List<Job> getJobs()
  + Job getJobByName(String name)
}

class Organization {
  - String name
  - String vatNumber
  - String address
  - String phone
  - String email
  + Optional<Job> createJob(String name)
  + boolean addJob(Job job)
  + boolean validateJob(Job job)
  + boolean jobsDoNotContain(Job job)
  + boolean equals(Object o)
}

class OrganizationRepository {
  + Optional<Organization> getOrganizationByHRM(HRM hrm)
  + Optional<Organization> getOrganizationByVFM(VFM vfm)
  + Optional<Organization> getOrganizationByHRMEmail(String email)
  + Optional<Organization> add(Organization organization)
  + boolean validateOrganization(Organization organization)
}

class Repositories {
  + getInstance() : Repositories
  + getJobRepository() : JobRepository
  + getOrganizationRepository() : OrganizationRepository
}

class CreateJobController {
  + CreateJobController(OrganizationRepository organizationRepository,
                                   JobRepository jobRepository,
                                   AuthenticationRepository authenticationRepository)
  + Optional<Job> createJob(String name, HRM hrm)
}

class CreateJobUI {
  + requestJobName()
}

class HRManager {
   - String name
   - int vatNumber
   - String email
   - int phonenumber
    + manageJobs(): void
}

JobManager --> Job: Manages
HRManager --> JobManager: Uses

note right of CreateJobController
  - Job name is obtained from the HRM's input
  - Updates the Job Repository
end note

note right of HRManager
  - HRM initiates job creation
end note

note left of CreateJobUI
  - UI for HRM to input and confirm job name
  - Communicates with CreateJobController
end note

note left of Organization
  - Manages jobs
  - Handles organizational details
end note

Repositories -> Repositories : instance
ApplicationSession -> ApplicationSession : instance

CreateJobUI .> CreateJobController

CreateJobController -down-> Repositories : retrieves instances

Repositories -down-> JobRepository : accesses
Repositories -down-> OrganizationRepository : accesses

CreateJobController ..> OrganizationRepository : organizationRepository

Repositories --> "1" OrganizationRepository

OrganizationRepository --> "*" Organization : persists
ApplicationSession --> "1" UserSession : userSession

CreateJobController ..> "1" Organization : organization
CreateJobController ..> ApplicationSession
CreateJobController ..> UserSession
Organization "1" --> "*" Job : owns
Job --> HRManager : createdBy

Organization --> "*" HRManager : employs

@enduml